--- a/Generation/app.json
+++ b/Generation/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/mine/mine",
-    "pages/generated/generated"
+    "pages/generated/generated",
+    "pages/uploaded/uploaded"
   ],
   "tabBar": {
     "color": "#999999",
