Add the logic of pure word

--- a/Generation/project.config.json
+++ b/Generation/project.config.json
@@ -8,10 +8,12 @@
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"nodeModules": false,
+		"uglifyFileName": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.8",
+	"libVersion": "2.4.0",
 	"appid": "wx605779143a485a34",
 	"projectname": "Generation",
 	"condition": {
